Создала палитру, Сверстала стартовую страницу

--- a/settings.html
+++ b/settings.html
@@ -11,7 +11,7 @@
   </header>
   <main class='Layout'>
     <section class="Layout__Container">
-      <form action="" class="Settings">
+      <form action="" class="Form Settings">
         <h2 class="Form__Title">Settings</h2>
         <p class="Form__Description">Configure repository connection and synchronization settings</p>
 
