--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
   <header class='Header'>
     <h1 class='PageTitle'>School CI server</h1>
-    <a class='Button' href="settings.html">
+    <a class='Button Button_size_s Button_role_settings Button_type_default' href="settings.html">
       <span class="Button__Icon"></span>
       <span class="Button__Text">Settings</span>
     </a>
   </header>
   <main class='Layout'>
-    <section class="Layout__Container">
+    <section class="Layout__Container SettingsPreview">
       <img class='Logo' src='#' alt='Логотип' />
       <p class="Description">Configure repository connection and synchronization settings</p>
-      <a href="settings.html" class="Button">Open Settings</a>
+      <a href="settings.html" class="Button Button_size_m Button_type_action">Open Settings</a>
     </section>
   </main>
   <footer class='Footer'>
