--- a/index.html
+++ b/index.html
@@ -3,27 +3,31 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
-<body>
+<body class='Theme_type_default'>
   <header class='Header'>
-    <h1 class='PageTitle'>School CI server</h1>
+    <h1 class='Text Text_size_l Text_view_secondary Title'>School CI server</h1>
     <a class='Button Button_size_s Button_role_settings Button_type_default' href="settings.html">
-      <span class="Button__Icon"></span>
+      <img class='Button__Icon' src="img/cog 1.svg" alt="Cog">      
       <span class="Button__Text">Settings</span>
     </a>
   </header>
   <main class='Layout'>
     <section class="Layout__Container SettingsPreview">
-      <img class='Logo' src='#' alt='Логотип' />
-      <p class="Description">Configure repository connection and synchronization settings</p>
+      <img class='SettingsPreview__Logo' src='img/logo 3.svg' alt='Логотип' />
+      <p class="SettingsPreview__Description Text Text_size_s Text_view_primary">Configure repository connection and synchronization settings</p>
       <a href="settings.html" class="Button Button_size_m Button_type_action">Open Settings</a>
     </section>
   </main>
   <footer class='Footer'>
-    <a href="" class="Footer__Link">Support</a>
-    <a href="" class="Footer__Link">Learning</a>
-    <div class="Footer__Copyright">© 2020 Your Name</div>
+    <div class="Footer__Links">
+      <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Support</a>
+      <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Learning</a>
+    </div>
+    <div class="Footer__Copyright Text Text_size_s Text_view_secondary">© 2020 Your Name</div>
   </footer>
 </body>
 </html>
