Доделала страницу build-hidtory

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class='Theme_type_default'>
   <header class='Header'>
-    <h1 class='Text Text_size_l Text_view_secondary Title'>School CI server</h1>
+    <h1 class='Text Text_size_xl Text_view_secondary Title'>School CI server</h1>
     <a class='Button Button_size_s Button_role_settings Button_type_default' href="settings.html">
       <img class='Button__Icon' src="img/cog 1.svg" alt="Cog">      
       <span class="Button__Text">Settings</span>
