--- a/settings.html
+++ b/settings.html
@@ -9,7 +9,7 @@
 </head>
 <body class='Theme_type_default'>
   <header class='Header'>
-    <h1 class='Text Text_size_l Text_view_secondary Title'>School CI server</h1>
+    <h1 class='Text Text_size_xl Text_view_secondary Title'>School CI server</h1>
   </header>
   <main class='Layout'>
     <section class="Layout__Container">
