Переделала десктопную версию index

--- a/settings.html
+++ b/settings.html
@@ -45,8 +45,8 @@
         </div>
 
         <div class="Form__Action">
-          <button class="Button Button_type_action Button_size_m Form__SubmitButton" type='submit'>Save</button>
-          <button class="Button Button_type_default Button_size_m">Cancel</button>
+          <button class="Button Button_view_submit Button_size_m Form__SubmitButton Button_type_default" type='submit'>Save</button>
+          <button class="Button Button_view_default Button_size_m Button_type_default">Cancel</button>
         </div>
       </form>
     </section>
