--- a/build-history.html
+++ b/build-history.html
@@ -10,11 +10,11 @@
 <body class='Theme_type_default'>
   <header class='Header'>
     <h1 class='Text Text_size_xl Text_view_primary Title'>philip1967/my-aw esome-repo-with-long-long-long-repo-name</h1>
-    <button class='Header__Button Button Button_size_s Button_role_build Button_type_default'>
+    <button class='Header__Button Button Button_size_s Button_role_build Button_view_default Button_type_action Button_textVisible'>
       <img class='Button__Icon' src="img/12_play.svg" alt="Build">
       <span class="Button__Text">Run build</span>
     </button>
-    <a class='Button Button_size_s Button_role_settings Button_type_default' href="settings.html">
+    <a class='Button Button_size_s Button_role_settings Button_view_default Button_type_action' href="settings.html">
       <img class='Button__Icon' src="img/cog 1.svg" alt="Cog">      
       <span class="Button__Text">Settings</span>
     </a>
@@ -203,7 +203,7 @@
           </div>
         </li>
       </ul>
-      <button class="Button Button_type_default Button_size_m">Show more</button>
+      <button class="Button Button_view_default Button_size_m Button_type_default">Show more</button>
     </section>
   </main>
   <footer class='Footer'>
