--- a/settings.html
+++ b/settings.html
@@ -37,7 +37,7 @@
             <button class="Button Button_role_clear Field__Button"><img class="Button__Icon" src='./img/Vector.svg'></button>
           </div>
   
-          <div class="Field Form__Field Field_align_line">
+          <div class="Field Form__Field Field_align_line Settings__SyncTimeField">
             <label for="synctime" class="Field__Label Text Text_size_s Text_view_primary">Synchronize every</label>
             <input class="Input Field__Control" id='synctime' type="number" value='10'>
             <span class="Field__Measure Text Text_size_s">minutes</span>
@@ -52,11 +52,13 @@
     </section>
   </main>
   <footer class='Footer'>
-    <div class="Footer__Links">
-      <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Support</a>
-      <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Learning</a>
+    <div class="Footer__Content">
+      <div class="Footer__Links">
+        <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Support</a>
+        <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Learning</a>
+      </div>
+      <div class="Footer__Copyright Text Text_size_s Text_view_secondary">© 2020 Your Name</div>
     </div>
-    <div class="Footer__Copyright Text Text_size_s Text_view_secondary">© 2020 Your Name</div>
   </footer>
 </body>
 </html>
