--- a/build-details.html
+++ b/build-details.html
@@ -9,36 +9,46 @@
 </head>
 <body class='Theme_type_default'>
   <header class='Header'>
-    <h1 class='Text Text_size_xl Text_view_primary Title'>philip1967/my-aw esome-repo-with-long-long-long-repo-name</h1>
-    <button class='Header__Button Button Button_size_s Button_role_build Button_view_default Button_type_action Button_textVisible'>
-      <img class='Button__Icon' src="img/12_play.svg" alt="Build">
-      <span class="Button__Text">Rebuild</span>
-    </button>
-    <a class='Button Button_size_s Button_role_settings Button_view_default Button_type_action' href="settings.html">
-      <img class='Button__Icon' src="img/cog 1.svg" alt="Cog">      
-      <span class="Button__Text">Settings</span>
-    </a>
+    <div class="Header__Content">
+      <h1 class='Text Text_size_xl Text_view_primary Title Header__Title'>philip1967/my-aw esome-repo-with-long-long-long-repo-name</h1>
+      <div class="Header__Action">
+        <button class='Header__Button Button Button_size_s Button_role_build Button_view_default Button_type_action Button_textVisible'>
+          <img class='Button__Icon' src="img/12_play.svg" alt="Build">
+          <span class="Button__Text">Run build</span>
+        </button>
+        <a class='Button Button_size_s Button_role_settings Button_view_default Button_type_action' href="settings.html">
+          <img class='Button__Icon' src="img/cog 1.svg" alt="Cog">      
+          <span class="Button__Text">Settings</span>
+        </a>
+      </div>
+    </div>
   </header>
   <main class='Layout'>
-    <section class="Layout__Container">
+    <section class="Layout__Container BuildDetails">
       <div class="BuildCard">
         <div class='BuildCard__Content'>
-          <img class='BuildCard__Status' src="./img/success.svg" alt="Success">
-          <div class="BuildCard__Number BuildCard__Number_status_success Text Text_size_l Text_view_success">#1368</div>
-          <p class="BuildCard__Description Text Text_size_m Text_view_primary">add documentation for postgres scaler</p>
-          <div class="BuildCard__Git">
-            <div class="BuildCard__CommitInfo">
-              <svg class='BuildCard__Icon' width="16" height="8" viewBox="0 0 16 8" xmlns="http://www.w3.org/2000/svg">
-                <path d="M3.2 4C3.2 4.27 3.2225 4.5375 3.265 4.8H0.3C0.135 4.8 0 4.665 0 4.5V3.5C0 3.335 0.135 3.2 0.3 3.2H3.265C3.2225 3.4625 3.2 3.73 3.2 4ZM15.7 3.2H12.735C12.78 3.4625 12.8 3.73 12.8 4C12.8 4.27 12.7775 4.5375 12.735 4.8H15.7C15.865 4.8 16 4.665 16 4.5V3.5C16 3.335 15.865 3.2 15.7 3.2ZM8 1.2C7.2525 1.2 6.55 1.4925 6.02 2.02C5.49 2.55 5.2 3.2525 5.2 4C5.2 4.7475 5.49 5.45 6.02 5.98C6.55 6.5075 7.2525 6.8 8 6.8C8.7475 6.8 9.45 6.5075 9.98 5.98C10.51 5.45 10.8 4.7475 10.8 4C10.8 3.2525 10.51 2.55 9.98 2.02C9.45 1.4925 8.7475 1.2 8 1.2ZM8 0C10.21 0 12 1.79 12 4C12 6.21 10.21 8 8 8C5.79 8 4 6.21 4 4C4 1.79 5.79 0 8 0Z"/>
+          <div class="BuildCard__Info">
+            <div class="BuildCard__Main">
+              <svg class='BuildCard__Status BuildCard__Status_status_success' width="16" height="16" viewBox="0 0 16 16" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15.1042 7.99992C15.1042 11.9235 11.9236 15.1041 8.00004 15.1041C4.07651 15.1041 0.895874 11.9235 0.895874 7.99992C0.895874 4.07639 4.07651 0.895752 8.00004 0.895752C11.9236 0.895752 15.1042 4.07639 15.1042 7.99992ZM7.17831 11.7615L12.4491 6.49068C12.6281 6.31171 12.6281 6.02149 12.4491 5.84251L11.801 5.19435C11.622 5.01534 11.3318 5.01534 11.1528 5.19435L6.85421 9.49288L4.84731 7.48598C4.66833 7.307 4.37812 7.307 4.19911 7.48598L3.55094 8.13415C3.37196 8.31313 3.37196 8.60334 3.55094 8.78232L6.53011 11.7615C6.70912 11.9405 6.9993 11.9405 7.17831 11.7615Z"/>
               </svg>
-              <div class="BuildCard__Branch Text Text_size_s Text_view_primary">master</div>
-              <div class="BuildCard__Commit Text Text_size_s Text_view_primary">9c90b9</div>
+              <div class="BuildCard__Number BuildCard__Number_status_success Text Text_size_l Text_view_success">#1368</div>
+              <p class="BuildCard__Description Text Text_size_m Text_view_primary">add documentation for postgres scaler</p>
             </div>
-            <div class="BuildCard__UserInfo">
-              <svg class='BuildCard__Icon' width="13" height="14" viewBox="0 0 13 14" xmlns="http://www.w3.org/2000/svg">
-                <path d="M6.125 7C8.0582 7 9.625 5.4332 9.625 3.5C9.625 1.5668 8.0582 0 6.125 0C4.1918 0 2.625 1.5668 2.625 3.5C2.625 5.4332 4.1918 7 6.125 7ZM8.575 7.875H8.11836C7.51133 8.15391 6.83594 8.3125 6.125 8.3125C5.41406 8.3125 4.74141 8.15391 4.13164 7.875H3.675C1.64609 7.875 0 9.52109 0 11.55V12.6875C0 13.4121 0.587891 14 1.3125 14H10.9375C11.6621 14 12.25 13.4121 12.25 12.6875V11.55C12.25 9.52109 10.6039 7.875 8.575 7.875Z"/>
+            <div class="BuildCard__Git">
+              <div class="BuildCard__CommitInfo">
+                <svg class='BuildCard__Icon' width="16" height="8" viewBox="0 0 16 8" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M3.2 4C3.2 4.27 3.2225 4.5375 3.265 4.8H0.3C0.135 4.8 0 4.665 0 4.5V3.5C0 3.335 0.135 3.2 0.3 3.2H3.265C3.2225 3.4625 3.2 3.73 3.2 4ZM15.7 3.2H12.735C12.78 3.4625 12.8 3.73 12.8 4C12.8 4.27 12.7775 4.5375 12.735 4.8H15.7C15.865 4.8 16 4.665 16 4.5V3.5C16 3.335 15.865 3.2 15.7 3.2ZM8 1.2C7.2525 1.2 6.55 1.4925 6.02 2.02C5.49 2.55 5.2 3.2525 5.2 4C5.2 4.7475 5.49 5.45 6.02 5.98C6.55 6.5075 7.2525 6.8 8 6.8C8.7475 6.8 9.45 6.5075 9.98 5.98C10.51 5.45 10.8 4.7475 10.8 4C10.8 3.2525 10.51 2.55 9.98 2.02C9.45 1.4925 8.7475 1.2 8 1.2ZM8 0C10.21 0 12 1.79 12 4C12 6.21 10.21 8 8 8C5.79 8 4 6.21 4 4C4 1.79 5.79 0 8 0Z"/>
                 </svg>
-              <div class="BuildCard__Author Text Text_size_s Text_view_primary">Philip Kirkorov</div>
+                <div class="BuildCard__Branch Text Text_size_s Text_view_primary">master</div>
+                <div class="BuildCard__Commit Text Text_size_s Text_view_primary">9c90b9</div>
+              </div>
+              <div class="BuildCard__UserInfo">
+                <svg class='BuildCard__Icon' width="13" height="14" viewBox="0 0 13 14" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M6.125 7C8.0582 7 9.625 5.4332 9.625 3.5C9.625 1.5668 8.0582 0 6.125 0C4.1918 0 2.625 1.5668 2.625 3.5C2.625 5.4332 4.1918 7 6.125 7ZM8.575 7.875H8.11836C7.51133 8.15391 6.83594 8.3125 6.125 8.3125C5.41406 8.3125 4.74141 8.15391 4.13164 7.875H3.675C1.64609 7.875 0 9.52109 0 11.55V12.6875C0 13.4121 0.587891 14 1.3125 14H10.9375C11.6621 14 12.25 13.4121 12.25 12.6875V11.55C12.25 9.52109 10.6039 7.875 8.575 7.875Z"/>
+                  </svg>
+                <div class="BuildCard__Author Text Text_size_s Text_view_primary">Philip Kirkorov</div>
+              </div>
             </div>
           </div>
           <div class="BuildCard__BuildDateTime">
@@ -58,7 +68,7 @@
         </div>
       </div>
     </section>
-    <pre class='Logs'><code>
+    <pre class='Logs Layout__Container'><code>
   Starting type checking and linting service...
   Using 1 worker with 2048MB memory limit
   Hash: d54ed20309f352b3bda76cbbb6d272ed6afde438bd7a265eb08db3624c32dfc883a8c379c67f4de6
@@ -120,11 +130,13 @@
   </main>
 
   <footer class='Footer'>
-    <div class="Footer__Links">
-      <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Support</a>
-      <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Learning</a>
+    <div class="Footer__Content">
+      <div class="Footer__Links">
+        <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Support</a>
+        <a href="" class="Footer__Link Text Text_size_s Text_view_secondary">Learning</a>
+      </div>
+      <div class="Footer__Copyright Text Text_size_s Text_view_secondary">© 2020 Your Name</div>
     </div>
-    <div class="Footer__Copyright Text Text_size_s Text_view_secondary">© 2020 Your Name</div>
   </footer>
 </body>
 </html>
