Добавила состояния кнопок, инпутов, ссылок

--- a/settings.html
+++ b/settings.html
@@ -25,6 +25,7 @@
           <div class='Field Form__Field'>
             <label for='repository' class='Field__Label Text Text_size_s Text_view_primary'>GitHub repository <span class='Field__Required'>*</span></label>
             <input class='Input Field__Control' id='repository' type='text' placeholder='user-name/repo-name'>
+            <button class='Button Button_role_clear Field__Button'><img class='Button__Icon' src='./img/Vector.svg'></button>
           </div>
   
           <div class='Field Form__Field'>
@@ -35,13 +36,13 @@
   
           <div class='Field Form__Field'>
             <label for='branch' class='Field__Label Text Text_size_s Text_view_primary'>Main Branch</label>
-            <input class='Input Input_state_focused Field__Control' id='branch' type='text' value='master'>
+            <input class='Input Field__Control' id='branch' type='text' value='master'>
             <button class='Button Button_role_clear Field__Button'><img class='Button__Icon' src='./img/Vector.svg'></button>
           </div>
   
           <div class='Field Form__Field Field_align_line Settings__SyncTimeField'>
             <label for='synctime' class='Field__Label Text Text_size_s Text_view_primary'>Synchronize every</label>
-            <input class='Input Field__Control' id='synctime' type='number' value='10'>
+            <input class='Input Field__Control' id='synctime' type='text' value='10'>
             <span class='Field__Measure Text Text_size_s'>minutes</span>
           </div>
         </div>
