--- a/build-details.html
+++ b/build-details.html
@@ -14,7 +14,7 @@
       <div class='Header__Action'>
         <button class='Header__Button Button Button_size_s Button_role_build Button_view_default Button_type_action Button_textVisible'>
           <img class='Button__Icon' src='img/12_play.svg' alt='Build'>
-          <span class='Button__Text'>Run build</span>
+          <span class='Button__Text'>Rebuild</span>
         </button>
         <a class='Button Button_size_s Button_role_settings Button_view_default Button_type_action' href='settings.html'>
           <img class='Button__Icon' src='img/cog 1.svg' alt='Cog'>      
