--- a/settings.html
+++ b/settings.html
@@ -25,19 +25,31 @@
           <div class='Field Form__Field'>
             <label for='repository' class='Field__Label Text Text_size_s Text_view_primary'>GitHub repository <span class='Field__Required'>*</span></label>
             <input class='Input Field__Control' id='repository' type='text' placeholder='user-name/repo-name'>
-            <button class='Button Button_role_clear Field__Button'><img class='Button__Icon' src='./img/Vector.svg'></button>
+            <button class='Button Button_role_clear Field__Button'>
+              <svg class='Button__Icon Button__Icon_view_secondary' width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8 16C3.6 16 0 12.4 0 8C0 3.6 3.6 0 8 0C12.4 0 16 3.6 16 8C16 12.4 12.4 16 8 16ZM12 5.12L10.88 4L8 6.88L5.12 4L4 5.12L6.88 8L4 10.88L5.12 12L8 9.12L10.88 12L12 10.88L9.12 8L12 5.12Z"/>
+              </svg>
+            </button>
           </div>
   
           <div class='Field Form__Field'>
             <label for='command' class='Field__Label Text Text_size_s Text_view_primary'>Build command</label>
             <input class='Input Field__Control' id='command' type='text' value='npm ci && npm run build'>
-            <button class='Button Button_role_clear Field__Button'><img class='Button__Icon' src='./img/Vector.svg'></button>
+            <button class='Button Button_role_clear Field__Button'>
+              <svg class='Button__Icon Button__Icon_view_secondary' width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8 16C3.6 16 0 12.4 0 8C0 3.6 3.6 0 8 0C12.4 0 16 3.6 16 8C16 12.4 12.4 16 8 16ZM12 5.12L10.88 4L8 6.88L5.12 4L4 5.12L6.88 8L4 10.88L5.12 12L8 9.12L10.88 12L12 10.88L9.12 8L12 5.12Z"/>
+              </svg>
+            </button>
           </div>
   
           <div class='Field Form__Field'>
             <label for='branch' class='Field__Label Text Text_size_s Text_view_primary'>Main Branch</label>
             <input class='Input Field__Control' id='branch' type='text' value='master'>
-            <button class='Button Button_role_clear Field__Button'><img class='Button__Icon' src='./img/Vector.svg'></button>
+            <button class='Button Button_role_clear Field__Button'>
+              <svg class='Button__Icon Button__Icon_view_secondary' width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8 16C3.6 16 0 12.4 0 8C0 3.6 3.6 0 8 0C12.4 0 16 3.6 16 8C16 12.4 12.4 16 8 16ZM12 5.12L10.88 4L8 6.88L5.12 4L4 5.12L6.88 8L4 10.88L5.12 12L8 9.12L10.88 12L12 10.88L9.12 8L12 5.12Z"/>
+              </svg>
+            </button>
           </div>
   
           <div class='Field Form__Field Field_align_line Settings__SyncTimeField'>
