--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,7 @@
   <title>SHRI CI</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app" class='Theme_type_default'></div>
   <script src="./app.js"></script>
 </body>
 </html>
