--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <div id="app" class='Theme_type_default'></div>
-  <script src="./app.js"></script>
+  <script src="./app.tsx"></script>
 </body>
 </html>
